# Instant-Messaging

./: BaseGroup.cpp  BaseGroupRCF.cpp  BaseGroupRCF.h  BaseUser.cpp  BaseUser.h  BaseUserRCF.cpp  BaseUserRCF.h  CMakeLists.txt  Date.cpp  Date.h  DateRCF.cpp  GroupChatServer.py  PrivateChatServer.py  QQGroup.cpp  QQGroup.h  QQGroupRCF.cpp  QQGroupRCF.h  README.md  groupclient.py  main.cpp  privateclient.py  something.cpp  something.h  somethingRCF.cpp
Release/client/: Groups.txt  Users.txt  im  loginclient.py
Release/server/: LoginServer.py
